# MyGame

./: .gitignore  CMakeLists.txt  README.md
include/: actor_system.h  http_ws_server.h  lua_env.h  message.h  proto_packet.h  skynet.h
lua/: ark_chat.py  bootstrap.lua
lua/service/: agent.lua  agent_actor.lua  idiom_room_actor.lua  idiom_room_logic.lua  liar_agent_pool.lua  liar_agent_pool_actor.lua  liar_agent_runtime.lua  lobby.lua  lobby_actor.lua  room_actor.lua  room_logic.lua
src/: main.cpp  room_process_main.cpp
src/core/: actor_system.cpp  lua_env.cpp  proto_packet.cpp  skynet.cpp
src/net/: http_ws_server.cpp  sha1.c
web/: app.js  characters.js  index.html  styles.css
